add content mentions and descriptions

--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -27,13 +27,23 @@ An amazing article written from 2012 which is still relevant today. I can't say 
 
 ## Content of the month
 
-![alt]({link} "caption")
+![Nichijou banner#f#hb](https://image.tmdb.org/t/p/original/3PQEbMOgQyOESo3XwtlJvZw6uoA.jpg "[[TMDB](https://image.tmdb.org/t/p/original/3PQEbMOgQyOESo3XwtlJvZw6uoA.jpg)] Nichijou | [See Review](reviews?query=Nichijou)")
+
+This month has been quite stressful and I've just realized how comforting and encouraging a good laugh really is, and Nichijou has accompanied me and never fails to make me laugh or smile every time I watched it again. In fact, for some of their clips, it gets even funnier. You may need to think hard for some of the jokes, but it's really funny once you get it.
 
 ### Honorable content mentions
+
+I haven't really had much time to finish most shows this month, and I don't usually mention shows that's not finished yet. But, here's a couple worthwhile for you to follow and enjoy as it's still going on.
+
+- [[DevMauss](reviews?query=Adachi%20and%20Shimamura)] Adachi and Shimamura
+- [[DevMauss](reviews?query=Jujutsu%20Kaisen)] Jujutsu Kaisen
+- [[DevMauss](reviews?query=TONIKAWA)] TONIKAWA: Over the Moon For You
 
 ## Music of the month | [Spotify Playlist](spotify:playlist:5MEc6r4ZMyu4W9gNk4CXtY)
 
 ![!YouTube#hb](sAuEeM_6zpk "[[Spotify](spotify:track:4BE1OloRc9xwjyqA4wFFuN)] YOASOBI「あの夢をなぞって・Tracing that Dream」")
+
+Such an amazing song and MV. I've been listening to this from the start of the month and I'm still addicted to it. If you listen and watch closely, you can really feel the fireworks at `3:02`.
 
 ### Honorable music mentions
 
@@ -124,7 +134,7 @@ Immediately after this takedown, someone created a new tree in the DMCA reposito
 
 Not long after, the Streisand effect takes place and GitHub is flooded with new repositories. GitHub now hosts hundreds (thousands without search filters) of new repositories containing the original source code.
 
-Source(s): [[Reddit/Takedown](https://www.reddit.com/r/programming/comments/jgub36/youtubedl_just_received_a_dmca_takedown_from_riaa/) | [GH/DMCA](https://github.com/github/dmca/blob/master/2020/10/2020-10-23-RIAA.md) | [Reddit/Exploit](https://www.reddit.com/r/programming/comments/jhlhok/someone_replaced_the_github_dmca_repo_with/) | [Reddit/StreisandEffect](https://www.reddit.com/r/Piracy/comments/jiwzf2/angry_youtubedl_users_flood_github_with_new_repos/) | [BleepingComputer](https://www.bleepingcomputer.com/news/software/angry-youtube-dl-users-flood-github-with-new-repos-after-takedown/)]
+Source(s): [[Reddit/Takedown](https://www.reddit.com/r/programming/comments/jgub36/youtubedl_just_received_a_dmca_takedown_from_riaa/) | [GH/DMCA](https://github.com/github/dmca/blob/master/2020/10/2020-10-23-RIAA.md) | [Reddit/Exploit](https://www.reddit.com/r/programming/comments/jhlhok/someone_replaced_the_github_dmca_repo_with/) | [Reddit/StreisandEffect](https://www.reddit.com/r/Piracy/comments/jiwzf2/angry_youtubedl_users_flood_github_with_new_repos/) | [BleepingComputer](https://www.bleepingcomputer.com/news/software/angry-youtube-dl-users-flood-github-with-new-repos-after-takedown/) | [TorrentFreak](https://torrentfreak.com/riaas-youtube-dl-takedown-ticks-of-developers-and-githubs-ceo-201027/)]
 
 ***
 
@@ -132,9 +142,7 @@ Source(s): [[Reddit/Takedown](https://www.reddit.com/r/programming/comments/jgub
 
 ### 01
 
-[[Reddit](https://www.reddit.com/r/LifeProTips/comments/j39u54/lpt_when_giving_advice_use_the_phrase_perhaps_in/) | [Comment](https://www.reddit.com/r/LifeProTips/comments/j39u54/lpt_when_giving_advice_use_the_phrase_perhaps_in/g7ajn15?utm_source=share&utm_medium=web2x&context=3)] When giving advice, use the phrase “perhaps” in replacement of “I think” so it comes off more as a suggestion and not an opinion. It will be more likely to be heard and taken into consideration
-
-[[Reddit](https://www.reddit.com/r/YouShouldKnow/comments/j35bv0/ysk_that_if_you_are_out_of_shape_and_embarrassed/)] You should know: That if you are out of shape and embarrassed to join a gym because of how people may perceive or judge you, know that most people there is either conscious/insecure about their own looks or just focused on their workout without paying attention to others. It's called the Spotlight Effect
+[[Reddit](https://www.reddit.com/r/YouShouldKnow/comments/j35bv0/ysk_that_if_you_are_out_of_shape_and_embarrassed/)] YSK: The Spotlight Effect
 
 ![Yuru Camp Season 2 new visual#d#f](https://external-preview.redd.it/EGe4OYjexWZW8d80SN_E_PLCVnkGQpJ1pfhiCqPWT-I.jpg?auto=webp&s=e09efd585b3379f8c02bbaf9c8fb1864595d3fc8 "[[Reddit](https://www.reddit.com/r/anime/comments/j30kcn/yuru_camp_season_2_new_visual/) | [Preview](https://external-preview.redd.it/EGe4OYjexWZW8d80SN_E_PLCVnkGQpJ1pfhiCqPWT-I.jpg?auto=webp&s=e09efd585b3379f8c02bbaf9c8fb1864595d3fc8)] Yuru Camp Season 2 new visual")
 
@@ -226,6 +234,10 @@ Source(s): [[Reddit/Takedown](https://www.reddit.com/r/programming/comments/jgub
 
 ![cheetah touched by a photographer#d#f](https://preview.redd.it/om3c29bv7sv51.jpg?width=640&crop=smart&auto=webp&s=52daba5eaf5abfb5800a4046e2be6799a55135fa "[[Reddit](https://www.reddit.com/r/nextfuckinglevel/comments/jjix8u/when_the_photographer_touched_the_cheetah/)] When someone you trust finally touches you and you realize you've been starved for physical affection all your life")
 
+### 29
+
+![Yuru Camp Season 2 another new visuals#d#f](https://external-preview.redd.it/yuyi0wlG_1bLEW1ynUIl6_ztxWEh_YxSGP8ZOQfnoQA.jpg?width=960&crop=smart&auto=webp&s=0bebf3b0350f9ae09565c05fbdd7569814f40fbd "[[Reddit](https://www.reddit.com/r/anime/comments/jk6o4i/yuru_camp_season_2_new_visuals/) | [Preview](https://external-preview.redd.it/yuyi0wlG_1bLEW1ynUIl6_ztxWEh_YxSGP8ZOQfnoQA.jpg?width=960&crop=smart&auto=webp&s=0bebf3b0350f9ae09565c05fbdd7569814f40fbd)] Yuru Camp Season 2 new visuals")
+
 ***
 
 That's it for our recap of October 2020, folks! Stay safe and have a great November 👋
@@ -267,3 +279,5 @@ As always, let me know if you like this format or have any feedback for the mont
 ![how people think building a PC vs. how it actually is#d#f](https://i.redd.it/dhrynogsj1v51.png "[[Reddit](https://www.reddit.com/r/pcmasterrace/comments/jh8jtb/they_cant_see_the_truth/)] How building a PC actually is")
 
 ![big data is like teenage stuff#d#f](https://i.redd.it/2gzr4u6fvrv51.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jji4u6/these_professors_need_to_slow_tf_down/)] These professors need to slow tf down")
+
+![working vs. trying to sleep as a programmer#d#f](https://preview.redd.it/0i8tna1a11w51.jpg?width=960&crop=smart&auto=webp&s=9414f25ff69d53bcb1791ccf5da0c914c7eab1d6 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jk90wu/im_a_programmer/)] I'm a programmer")
