add recommended article to mentions

--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -17,13 +17,15 @@ This was surprisingly cool and scary at the same time. It's crazy, how are you s
 
 Another great read from Chris Coyier for an evolution of last month's article of the month. For all of you who's going to jump in the web development rabbit hole, especially as a front-end developer (FED), please read this first and understand it thoroughly.
 
-Technology is always evolving, but front-end's growth is too rapid with only months or weeks between major updates. Pair that with all the prerequisites you still need to understand first, how much of a preparations you need to know before you can actually work on something.
-
-You cannot stop and you must not stop. Once you're in, you must go through it till the end. Front-end will keep evolving and they will leave you behind if you can't keep up. Do you have what it takes to follow it through? If so, then **Godspeed to you**
+Technology is always evolving, but Front-end growth is too rapid and they will leave you behind if you can't keep up. Do you have what it takes to follow it through? If so, then **Godspeed to you**
 
 - [[Troy Hunt](https://www.troyhunt.com/everything-you-ever-wanted-to-know/)] Everything you ever wanted to know about building a secure password reset feature
 
 An amazing article written from 2012 which is still relevant today. I can't say much about this since it already explains most of my worries from applications out there in the article. It has a [TL;DR version in a diagram form](https://www.troyhunt.com/content/images/2016/02/21782177Password-Reset5.png) too.
+
+- [[DevelopersForHire](https://www.developersforhire.com/software-developer-vs-software-engineer)] Software Developer vs. Engineer: What's the Difference?
+
+I was recommended to take a look at this article earlier this month, it was quite a long read and researched based on the US standards heavily. In the end, words are just how people see and perceived them, that's how slangs come to be. But, it's still worth to take a look, especially if you're someone conscious about titles since they really break it down quite deep there.
 
 ## Content of the month
 
