fix duplicate result of nichijou

--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -29,7 +29,7 @@ I was recommended to take a look at this article earlier this month, it was quit
 
 ## Content of the month
 
-![Nichijou banner#f#hb](https://image.tmdb.org/t/p/original/3PQEbMOgQyOESo3XwtlJvZw6uoA.jpg "[[TMDB](https://image.tmdb.org/t/p/original/3PQEbMOgQyOESo3XwtlJvZw6uoA.jpg)] Nichijou | [See Review](reviews?query=Nichijou)")
+![Nichijou banner#f#hb](https://image.tmdb.org/t/p/original/3PQEbMOgQyOESo3XwtlJvZw6uoA.jpg "[[TMDB](https://image.tmdb.org/t/p/original/3PQEbMOgQyOESo3XwtlJvZw6uoA.jpg)] Nichijou | [See Review](reviews?query=Nichijou%3A%20My%20Ordinary%20Life)")
 
 This month has been quite stressful and I've just realized how comforting and encouraging a good laugh really is, and Nichijou has accompanied me and never fails to make me laugh or smile every time I watched it again. In fact, for some of their clips, it gets even funnier. You may need to think hard for some of the jokes, but it's really funny once you get it.
 
