refactor: change space to plus sign

--- a/content/posts/2018-12-07.activate-sublime-text-3.md
+++ b/content/posts/2018-12-07.activate-sublime-text-3.md
@@ -19,10 +19,10 @@ Sublime Text has the ability to install and use different color schemes as some 
 
 [Check the Latest Version](https://www.sublimetext.com/3)
 
-- [OS X](https://download.sublimetext.com/Sublime%20Text%20Build%203176.dmg) (10.7 or later is required)
+- [OS X](https://download.sublimetext.com/Sublime+Text+Build+3176.dmg) (10.7 or later is required)
 - [Linux Repositories](https://www.sublimetext.com/docs/3/linux_repositories.html)
-- [Windows 32-bit](https://download.sublimetext.com/Sublime%20Text%20Build%203176%20Setup.exe) &ndash; [Portable Version](https://download.sublimetext.com/Sublime%20Text%20Build%203176.zip)
-- [Windows 64-bit](https://download.sublimetext.com/Sublime%20Text%20Build%203176%20x64%20Setup.exe) &ndash; [Portable Version](https://download.sublimetext.com/Sublime%20Text%20Build%203176%20x64.zip)
+- [Windows 32-bit](https://download.sublimetext.com/Sublime+Text+Build+3176+Setup.exe) &ndash; [Portable Version](https://download.sublimetext.com/Sublime+Text+Build+3176.zip)
+- [Windows 64-bit](https://download.sublimetext.com/Sublime+Text+Build+3176+x64+Setup.exe) &ndash; [Portable Version](https://download.sublimetext.com/Sublime+Text+Build+3176+x64.zip)
 
 ## PART B &bull; How to Activate
 
