--- a/content/posts/2020-04-15.tdd-a-double-edged-sword.md
+++ b/content/posts/2020-04-15.tdd-a-double-edged-sword.md
@@ -8,7 +8,7 @@ date:updated: 2020-04-27
 
 [![TDD Global Life Cycle](https://upload.wikimedia.org/wikipedia/commons/0/0b/TDD_Global_Lifecycle.png)](https://en.wikipedia.org/wiki/File:TDD_Global_Lifecycle.png)
 
-> Double-Edged Sword: [something that has or can have both favorable and unfavorable consequences](https://www.merriam-webster.com/dictionary/double-edged%20sword)
+> Double-Edged Sword: [something that has or can have both favorable and unfavorable consequences](https://www.merriam-webster.com/dictionary/double-edged+sword)
 
 Test-driven development (TDD), undoubtedly one of the most powerful way to keep any codebase **clean**, **sustainable**, and **maintainable**, especially in the long run. Unlike programming paradigms, this process or practice can be implemented in any project. Of course, with great benefits comes at a great cost, and it is certainly not a silver bullet nor a one-size fits all type. **Just because it can be used in any project, does it mean you should?**
 
