fill in playlist links

--- a/content/curated/digest/202011.md
+++ b/content/curated/digest/202011.md
@@ -15,7 +15,7 @@ Hey folks, welcome back to our monthly digest! As always, feel free to skip ahea
 
 ### Honorable content mentions
 
-## Music of the month | [Spotify Playlist]({spotify_playlist_uri})
+## Music of the month | [Spotify Playlist](spotify:playlist:3u52u0faYK0uLQz5wgL7k3)
 
 ![!YouTube#hb]({youtube_id} "[[Spotify](link)] title")
 
@@ -23,7 +23,7 @@ Hey folks, welcome back to our monthly digest! As always, feel free to skip ahea
 
 ![!YouTube#d](IVQkcd706-4 "[[Spotify](spotify:track:1St4foaXsAX3vvkXXRA0l2)] EBEN - My Decree (feat. Micah Martin)")
 
-## Video of the month | [YouTube Playlist]({youtube_playlist_link})
+## Video of the month | [YouTube Playlist](https://www.youtube.com/playlist?list=PLtthNj7yut56ZNuJAMeu9-o63Idh9auJ3)
 
 ![!YouTube#hb]({youtube_id} "title")
 
@@ -33,11 +33,11 @@ Hey folks, welcome back to our monthly digest! As always, feel free to skip ahea
 
 ## Headlines of the month
 
-### {Headline}
+### Kick Google Play Outside Your Smartphone With AuroraStore
 
-{Summary}
+Built to truly be an alternative to Google Play Store (and not something like F-Droid)
 
-Source(s): [[Links]]
+Source(s): [[FOSS Post](https://fosspost.org/aurorastore-google-play-alternative/)]
 
 ***
 
