complete music section

--- a/content/curated/digest/202011.md
+++ b/content/curated/digest/202011.md
@@ -17,11 +17,23 @@ Hey folks, welcome back to our monthly digest! As always, feel free to skip ahea
 
 ## Music of the month | [Spotify Playlist](spotify:playlist:3u52u0faYK0uLQz5wgL7k3)
 
-![!YouTube#hb]({youtube_id} "[[Spotify](link)] title")
+![!YouTube#hb](qU-181e-hSw "[[Spotify](spotify:track:7DTk1207Efq0HBUEYmbcTB)] Stonebank - Scared")
+
+Another awesome release from Stonebank (a.k.a. StoneDank because the releases are always Dank). Not to mention the genre is Drum and Bass (DnB), one of my favorites in the EDM scope.
 
 ### Honorable music mentions
 
 ![!YouTube#d](IVQkcd706-4 "[[Spotify](spotify:track:1St4foaXsAX3vvkXXRA0l2)] EBEN - My Decree (feat. Micah Martin)")
+
+Awesome song with amazing vocals by Micah Martin. With psyched up Mob as the background, it gives off such vibes that gets you all pumped up.
+
+![!YouTube#d](S1CaLdzwuU4 "[[Spotify](spotify:track:2raUfi0wM6gDa3RDKNQySD)] Tristam - Violence")
+
+I think [this meme](https://www.reddit.com/r/Monstercat/comments/jlx7ru/meme_everyone_hearing_violence_for_the_first_time/) from the community describes everyone who knew about Tristam well. It was such a great feeling when I first saw it, and it's also a great release.
+
+![!YouTube#d](TYxzSjAABng "[[Spotify](spotify:track:10r998Pph8xlvZ9eUKz4mD)] MUZZ - Somewhere Else (feat. Danyka Nadeau)")
+
+Another worthy mention to MUZZ and Danyka Nadeau latest release, Somewhere Else. Such a great song and animations, it's shocking how far Monstercat releases has improved over the time.
 
 ## Video of the month | [YouTube Playlist](https://www.youtube.com/playlist?list=PLtthNj7yut56ZNuJAMeu9-o63Idh9auJ3)
 
@@ -54,3 +66,5 @@ That's it for our recap of November 2020, folks! Stay safe and have a great Dece
 As always, let me know if you like this format or have any feedback for the monthly digests in my Twitter, Keybase, or other socials down below.
 
 ## Bonus - Monthly memes
+
+![fear of covid#d#f](https://preview.redd.it/l2xq1qn1qkw51.jpg?width=640&crop=smart&auto=webp&s=7858c549eebafe636a0789c328468fe9b9bdf6e3 "[[Reddit](https://www.reddit.com/r/memes/comments/jlxzsh/everyone_on_earth_relates/)] Everyone on Earth relates")
