move playlist link to h3 tag with honorable mention

--- a/content/curated/digest/202011.md
+++ b/content/curated/digest/202011.md
@@ -15,13 +15,13 @@ Hey folks, welcome back to our monthly digest! As always, feel free to skip ahea
 
 ### Honorable content mentions
 
-## Music of the month | [Spotify Playlist](spotify:playlist:3u52u0faYK0uLQz5wgL7k3)
+## Music of the month
 
 ![!YouTube#hb](qU-181e-hSw "[[Spotify](spotify:track:7DTk1207Efq0HBUEYmbcTB)] Stonebank - Scared")
 
 Another awesome release from Stonebank (a.k.a. StoneDank because the releases are always Dank). Not to mention the genre is Drum and Bass (DnB), one of my favorites in the EDM scope.
 
-### Honorable music mentions
+### Honorable music mentions | [Spotify](spotify:playlist:3u52u0faYK0uLQz5wgL7k3) / [YouTube](https://www.youtube.com/playlist?list=PLtthNj7yut551MwQsLcNFs8kL5guFzDPY)
 
 ![!YouTube#d](IVQkcd706-4 "[[Spotify](spotify:track:1St4foaXsAX3vvkXXRA0l2)] EBEN - My Decree (feat. Micah Martin)")
 
@@ -35,11 +35,11 @@ I think [this meme](https://www.reddit.com/r/Monstercat/comments/jlx7ru/meme_eve
 
 Another worthy mention to MUZZ and Danyka Nadeau latest release, Somewhere Else. Such a great song and animations, it's shocking how far Monstercat releases has improved over the time.
 
-## Video of the month | [YouTube Playlist](https://www.youtube.com/playlist?list=PLtthNj7yut56ZNuJAMeu9-o63Idh9auJ3)
+## Video of the month
 
 ![!YouTube#hb]({youtube_id} "title")
 
-### Honorable video mentions
+### Honorable video mentions | [YouTube Playlist](https://www.youtube.com/playlist?list=PLtthNj7yut56ZNuJAMeu9-o63Idh9auJ3)
 
 ***
 
