--- a/content/curated/digest/202011.md
+++ b/content/curated/digest/202011.md
@@ -9,6 +9,18 @@ Hey folks, welcome back to our monthly digest! As always, feel free to skip ahea
 
 ### Honorable article mentions
 
+- [[Reddit](https://www.reddit.com/r/explainlikeimfive/comments/jt41d9/eli5_why_is_the_url_of_google_searches_so_long/gc3g0js?context=3)] Google's long search URL explained
+
+Not really an article, but a really informative reply explaining what and why Google's search URL is so long.
+
+- [[HFET](https://hfet.org/google-recaptcha-privacy-nightmare/)] Google’s ReCAPTCHA Privacy Nightmare
+
+You're forced to agree to Google's Privacy Policy on sites that uses ReCAPTCHA. Yes, by clicking on those "I'm not a robot" checkboxes, it also means you agree to their terms. Read more on the article for a thorough explanation and alternatives.
+
+- [[Reddit](https://www.reddit.com/r/anime/comments/jm7w66/this_is_why_your_mates_think_anime_is_gore_filled/)] Why Your Mate Think Anime is Gore ...
+
+A well researched and written essay of why Anime has such bad reputation in certain places. Included with all the sources, if you know anyone who thinks about Anime this way, you could ask them to try have an open-mind and read this essay. Even if you don't, you should at least know the history if you're in the Anime community.
+
 ## Content of the month
 
 ![alt#f#fb]({link} "caption")
@@ -20,6 +32,8 @@ Hey folks, welcome back to our monthly digest! As always, feel free to skip ahea
 ![!YouTube#hb](qU-181e-hSw "[[Spotify](spotify:track:7DTk1207Efq0HBUEYmbcTB)] Stonebank - Scared")
 
 Another awesome release from Stonebank (a.k.a. StoneDank because the releases are always Dank). Not to mention the genre is Drum and Bass (DnB), one of my favorites in the EDM scope.
+
+There's also a lot of amazing mixes released this month, be sure to check them out in the new YouTube Music playlist down below.
 
 ### Honorable music mentions | [Spotify](spotify:playlist:3u52u0faYK0uLQz5wgL7k3) / [YouTube](https://www.youtube.com/playlist?list=PLtthNj7yut551MwQsLcNFs8kL5guFzDPY)
 
@@ -47,17 +61,127 @@ Another worthy mention to MUZZ and Danyka Nadeau latest release, Somewhere Else.
 
 ### Kick Google Play Outside Your Smartphone With AuroraStore
 
-Built to truly be an alternative to Google Play Store (and not something like F-Droid)
+Built to truly be an alternative to Google Play Store (and not something like F-Droid). This is perfect for you who wanted to start your privacy-focused journey. AuroraStore is easy to install and includes both apps and games, just like Play Store does.
 
 Source(s): [[FOSS Post](https://fosspost.org/aurorastore-google-play-alternative/)]
+
+### PSA: Your Public Domain Is Part of Your Infrastructure and Not Just Your Homepage
+
+The post itself describes it well in a form of rant. Generally, don't do anything with your domain without consulting your IT, don't even give keys or access to others, especially telling "web guys" to cancel "that old homepage".
+
+Source(s): [[Reddit](https://www.reddit.com/r/sysadmin/comments/jm2iu3/psa_your_public_domain_is_part_of_your/)]
+
+### Your Phone Number May Be Readily Available to Anyone if You Play Genshin Impact
+
+The forgot password feature can be used to show your phone number to anyone, if you linked a mobile number to your account. Email would be partially censored, but not the phone number. This seems to be fixed now, but we don't know how many phone numbers were exposed publicly.
+
+Source(s): [[Reddit/Privacy](https://www.reddit.com/r/privacy/comments/jr2d3f/if_you_play_genshin_impact_your_phone_number_may/) | [Reddit/Thread](https://www.reddit.com/r/Genshin_Impact/comments/jqzcw7/if_you_linked_via_mobile_your_phone_numbers_are/)]
+
+### Google Photos will end its free unlimited storage on June 1st, 2021
+
+The time has finally come for Google to kill one of it's products again, this time it's their unlimited photos service. With almost everyone I knew using Google Photos to back up all of the photos since the beginning of time, most people have now found a way to download and archive all of it using tools across the internet. It was a good run, I personally didn't use it because I don't like my photos compressed, so I still keep it there but with the original option checked, so everything counts towards my quota.
+
+Source(s): [[Reddit](https://www.reddit.com/r/Android/comments/jsd5kf/google_photos_will_end_its_free_unlimited_storage/) | [The Verge](https://www.theverge.com/2020/11/11/21560810/google-photos-unlimited-cap-free-uploads-15gb-ending) | [Google Blog](https://blog.google/products/photos/storage-changes/)]
+
+### Flappy bird in 341 bytes of URI formatted HTML and JavaScript
+
+One madman created an entirely playable Flappy Bird in 341 bytes of HTML and JavaScript encoded as URI. As of writing this, the community has tried to reduce it even more and it stands at less than 200 bytes, 195 bytes to be exact.
+
+Source(s): [[Reddit](https://www.reddit.com/r/programming/comments/k3alda/flappy_bird_in_341_bytes/) | [GitHub](https://gist.github.com/gullyn/95b2ab9e465317f1d4e4607cf6e94205)]
 
 ***
 
 ## Detailed monthly recap
 
-### {Date}
+### 02
 
-[[Source](link)] Title
+[[Reddit](https://www.reddit.com/r/nextfuckinglevel/comments/jmd6co/growing_a_tree_5_year_timelapse/)] A 5 year time-lapse of tree growing
+
+[[Reddit](https://www.reddit.com/r/Damnthatsinteresting/comments/jmln03/in_south_korea_the_solar_panels_in_the_middle_of/)] Solar panels in the middle of the highway with a bicycle path underneath
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/jmlxsm/lpt_toxic_positivity_is_totally_a_thing_dont_let/)] Toxic positivity is totally a thing. Don't let the "good vibes only" people invalidate your feelings and life experiences.
+
+### 03
+
+![!Video#d#f](https://thumbs.gfycat.com/CreepyBasicHairstreak-mobile.mp4 "[[Reddit](https://www.reddit.com/r/WatchandLearn/comments/jml4ry/sperm_attacked_by_womans_immune_system/)] How a woman's immune system works")
+
+### 06
+
+[[Reddit](https://www.reddit.com/r/programming/comments/jootrl/how_turingcompleteness_prevents_automatic/) | [Alan Language](https://alan-lang.org/the-turing-completeness-problem.html)] How Turing-Completeness Prevents Automatic Parallelization
+
+### 07
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/jpiw8o/lpt_when_a_problem_arises_skip_blame_and_go/)] LPT: When a problem arises, skip blame and go straight to, "How can we resolve it?" Accountability comes after, never first.
+
+### 09
+
+[[Reddit Thread](https://www.reddit.com/r/AskReddit/comments/jqo3p4/serious_what_is_the_harshest_truth_youve_ever/)] What is the harshest truth you’ve ever learned?
+
+### 10
+
+[[Reddit](https://www.reddit.com/r/programming/comments/jr6jgs/making_mass_effect_not_require_administrator/) | [Article](https://www.me3tweaks.com/blog/modding/making-me1-not-require-admin-rights-part-2/)] Making Mass Effect not require administrator rights, or maybe how to not write a boolean check
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/jr8qln/lpt_if_something_is_worth_doing_its_worth_doing/)] If something is worth doing, it's worth doing POORLY. Don't let perfection prevent progress... any action is better than no action!
+
+[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jrk2ik/its_a_complete_mess_out_there/)] (meme) senior developer fixing a bug in production
+
+### 12
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/jsgxrg/lpt_most_people_will_bend_over_backwards_to_help/)] Most people will bend over backwards to help you learn about a topic they feel passionate about. Don't be afraid to ask
+
+[[Reddit](https://www.reddit.com/r/youtube/comments/jsk2wn/youtubecom_is_down_right_now_please_keep_all/)] YouTube is down.
+
+### 13
+
+![you're worth something now#d#f](https://preview.redd.it/uc8slqplyzy51.jpg?width=640&crop=smart&auto=webp&s=ff3e82e525138258c55fecb721f1df318e3664e1 "[[Reddit](https://www.reddit.com/r/wholesomememes/comments/jtfrg6/watch_yourself_grow/)] Watch yourself grow")
+
+### 14
+
+[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jtnrlk/everyone_loves_pointers_right/)] (meme) Forgetting `free()` in loop
+
+[[Reddit](https://www.reddit.com/r/DataHoarder/comments/jttcsk/unus_annus_is_archived/) | [Archive](https://archive.org/details/unus-annus)] Unus Annus is archived!
+
+![memento mori#d#f](https://i.redd.it/7bm5hx81t7z51.png "[[Reddit](https://www.reddit.com/r/memes/comments/ju2nez/what_who_uh/)] (meme) After Unus Annus is killed")
+
+### 16
+
+[[Reddit](https://www.reddit.com/r/programming/comments/jv7kls/youtubedls_repository_has_been_restored/) | [GitHub](https://github.com/ytdl-org/youtube-dl) | [Reversal EFF Letter](https://github.com/github/dmca/blob/master/2020/11/2020-11-16-RIAA-reversal-effletter.pdf)] YouTube-dl's repository has been restored.
+
+![hard part is proving it#d#f](https://preview.redd.it/gu7z6zinxiz51.jpg?width=960&crop=smart&auto=webp&s=2603df8be7fc978f26e2d51b1a342c518b1504fe "[[Reddit](https://www.reddit.com/r/clevercomebacks/comments/juzxh4/what_can_be_asserted_without_evidence_can_also_be/)] “What can be asserted without evidence can also be dismissed without evidence” - Chris Hitchens")
+
+### 17
+
+[[Reddit Discussion](https://www.reddit.com/r/MachineLearning/comments/jvq4jw/d_why_machine_learning_is_more_boring_than_you/)] Machine learning is more boring than you think
+
+[[Reddit](https://www.reddit.com/r/programming/comments/jvrpvj/how_spotify_codes_work/) | [Article](https://boonepeter.github.io/posts/2020-11-10-spotify-codes/)] How Spotify Codes work
+
+### 19
+
+[[Reddit](https://www.reddit.com/r/nextfuckinglevel/comments/jwnysr/woman_calls_911_pretending_to_order_pizza_due_to/)] Woman calls 911 pretending to order pizza due to domestic violence
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/jx355w/lpt_when_using_superglue_use_a_very_small_amount/)] Bond superglue immediately by applying water to the other surface
+
+### 20
+
+[[Reddit](https://www.reddit.com/r/technology/comments/jx77c8/youtube_will_run_ads_on_smaller_creators_videos/) | [Engadget](https://www.engadget.com/youtube-ads-on-small-creator-videos-111043478.html)] YouTube will run ads on smaller creators' videos without paying them
+
+[[Reddit](https://www.reddit.com/r/explainlikeimfive/comments/jxmltg/eli5_what_causes_us_to_get_bagsdark_circles_under/gcxk7ul?context=3)] What causes us to get bags/dark circles under our eyes when we are tired?
+
+### 23
+
+![the three musketeers#d#f](https://preview.redd.it/edbn1yivww061.jpg?width=960&crop=smart&auto=webp&s=78b3b4dd48df8dbc0f9efa8201f1dc6eb27c0729 "[[Reddit](https://www.reddit.com/r/anime/comments/jzaaeo/new_my_hero_movie_is_in_production/)] New My Hero Movie in production!")
+
+### 24
+
+[[Reddit](https://www.reddit.com/r/Damnthatsinteresting/comments/jztwcd/builder_explains_why_the_rivets_on_a_tape_measure/)] Builder explains why the rivets on a tape measure are so important
+
+### 26
+
+[[Reddit](https://www.reddit.com/r/webdev/comments/k0yj3k/how_to_round_down_numbers_in_css/) | [StackOverflow](https://stackoverflow.com/questions/37754542/css-calc-round-down-with-two-decimal-cases/64921523#64921523)] How to round down numbers in CSS
+
+[[Reddit](https://www.reddit.com/r/programminghorror/comments/k1dxx8/hmm_yes_experience_yes/)] Horror read for programmers / interviewers out there
+
+[[Reddit](https://www.reddit.com/r/programming/comments/k16g2e/dark_mode_coming_to_github_after_7_years/) | [GitHub](https://github.com/isaacs/github/issues/66#issuecomment-733446758)] Dark Mode Coming to GitHub After 7 Years
 
 ***
 
@@ -68,3 +192,29 @@ As always, let me know if you like this format or have any feedback for the mont
 ## Bonus - Monthly memes
 
 ![fear of covid#d#f](https://preview.redd.it/l2xq1qn1qkw51.jpg?width=640&crop=smart&auto=webp&s=7858c549eebafe636a0789c328468fe9b9bdf6e3 "[[Reddit](https://www.reddit.com/r/memes/comments/jlxzsh/everyone_on_earth_relates/)] Everyone on Earth relates")
+
+![clone by reference or value#d#f](https://i.redd.it/vrrcvqiy17x51.png "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jnumng/programmers_really_jump_to_the_core_of/)] Programmers really jump to the core of philosophical questions")
+
+![request timed out#d#f](https://i.redd.it/7ghqid47b2x51.jpg "[[Reddit](https://www.reddit.com/r/iiiiiiitttttttttttt/comments/jnhw1t/when_you_thought_the_reboot_would_take_10_minutes/)] When you thought the reboot would take 10 minutes and 15 minutes has passed")
+
+![rushed out drawing#d#f](https://preview.redd.it/dpzlmho7r5x51.jpg?width=960&crop=smart&auto=webp&s=568ff1141806b2f5aff640cd06d1de08ae9b17af "[[Reddit](https://www.reddit.com/r/memes/comments/jnqufb/i_feel_it/)] When there's only 5 minutes left on the exam")
+
+![winning and losing at the same time#d#f](https://preview.redd.it/8tldxrj4vhx51.gif?width=960&format=mp4&s=b5b767d0f5d7def3742ba3c3bc31d68d062c6863 "[[Reddit](https://www.reddit.com/r/HighQualityGifs/comments/jos5xq/trump_needs_more_ballots_and_less_ballots/)] Trump needs more AND less ballots")
+
+![!Video#d](https://preview.redd.it/ywppt28t27y51.gif?format=mp4&s=b65f1879207340f0cfa5beddfec9d06a280f958e "[[Reddit](https://www.reddit.com/r/pcmasterrace/comments/jqvjdo/dont_worry_guys_i_fixed_the_meme/)] How my relationship with the computer is lately")
+
+![before and after meeting time#d#f](https://preview.redd.it/zr8if3gdtafz.png?width=960&crop=smart&auto=webp&s=3a8cbdb6f79e1a3d77d48f8312eb7b75f3136414 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/js4z65/meetings_as_a_developer/)] Meetings as a developer")
+
+![called into work because you're reliable#d#f](https://i.redd.it/02rp5m3x3oz51.jpg "[[Reddit](https://www.reddit.com/r/memes/comments/jvfa57/this_is_what_i_get_for_not_making_plans/)] When you're reliable in your work")
+
+![disappointment is our currency#d#f](https://i.redd.it/b00lfqx3voz51.jpg "[[Reddit](https://www.reddit.com/r/memes/comments/jvi392/i_like_megaman/)] Everyone is rich in 2020")
+
+![adding one more feature to the current sprint#d#f](https://preview.redd.it/z7oor97ixuz51.jpg?width=640&crop=smart&auto=webp&s=ff8ee39d8f8a4af1a0bef4c02cfa22663463a1f0 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jw0bnf/seems_legit/)] Every project ever")
+
+![my linkedin profile#d#f](https://preview.redd.it/p34tyi2lwyz51.jpg?width=960&crop=smart&auto=webp&s=f7dc1e4d960e4463ff560f1cfa68ea8335286d90 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jwcu5a/ah_yes_im_a_ditto_expert/)] Great way to interview your interviewer")
+
+![garbage collection#d#f](https://i.redd.it/d6unik8z11061.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jwj6s0/let_them_decide_for_themselves/)] Letting the users decide for themselves")
+
+![working all day to finish it EOD#d#f](https://preview.redd.it/dfduhu3bas061.png?width=960&crop=smart&auto=webp&s=89a44a6b6cc10e50d6534a6677bdc123b3989834 "[[Reddit](https://www.reddit.com/r/funny/comments/jyus9g/when_the_boss_tells_you_its_u_r_g_e_n_t/)] When the boss tells you it's u r g e n t")
+
+![working in the backend vs frontend#d#f](https://preview.redd.it/3gin4izk4w161.jpg?width=960&crop=smart&auto=webp&s=db2e12412a2ad496525fd7454fe36950282fdcb2 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/k2f0a2/damn_css/)] Damn CSS")
