add article of the month

--- a/content/curated/digest/202011.md
+++ b/content/curated/digest/202011.md
@@ -7,11 +7,19 @@ Hey folks, welcome back to our monthly digest! As always, feel free to skip ahea
 
 ## Article of the month
 
+![article of the month hero image#f#fb](https://letterstoanewdeveloper.files.wordpress.com/2020/11/gary-chan-yzszn3qvheo-unsplash.jpg?w=640&#038;h=480&#038;crop=1 "[[Letters To A New Developer](https://letterstoanewdeveloper.com/2020/11/23/always-leave-the-code-better-than-you-found-it/)] Always leave the code better than you found it")
+
+I really couldn't have said it better. This isn't exclusive to new developers, but really anyone working with a team or encountering any codebase.
+
+> Code isn’t everything, but it is an important work output. Whenever you touch it, you should strive to leave it in a better place that it was before you did so.
+
+Of course, whenever I encounter anything related to programming like this, I always feel like this isn't exclusive to software engineers as well, but when we really get the idea behind it, we could virtually apply it to anything in our life and improve ourselves. This is also one of it.
+
 ### Honorable article mentions
 
-- [[Reddit](https://www.reddit.com/r/explainlikeimfive/comments/jt41d9/eli5_why_is_the_url_of_google_searches_so_long/gc3g0js?context=3)] Google's long search URL explained
+- [[CSS-Tricks](https://css-tricks.com/lots-of-ways-to-use-math-random-in-javascript/)] Lots of Ways to Use Math.random() in JavaScript
 
-Not really an article, but a really informative reply explaining what and why Google's search URL is so long.
+An amazing and well-written article showcasing the different uses from a simple `Math.random()` API. From animations to computer-generated music, and even generative art. Go check it out!
 
 - [[HFET](https://hfet.org/google-recaptcha-privacy-nightmare/)] Google’s ReCAPTCHA Privacy Nightmare
 
@@ -20,6 +28,10 @@ You're forced to agree to Google's Privacy Policy on sites that uses ReCAPTCHA. 
 - [[Reddit](https://www.reddit.com/r/anime/comments/jm7w66/this_is_why_your_mates_think_anime_is_gore_filled/)] Why Your Mate Think Anime is Gore ...
 
 A well researched and written essay of why Anime has such bad reputation in certain places. Included with all the sources, if you know anyone who thinks about Anime this way, you could ask them to try have an open-mind and read this essay. Even if you don't, you should at least know the history if you're in the Anime community.
+
+**Bonus**: [[Reddit](https://www.reddit.com/r/explainlikeimfive/comments/jt41d9/eli5_why_is_the_url_of_google_searches_so_long/gc3g0js?context=3)] Google's long search URL explained
+
+Not really an article, but a really informative reply explaining what and why Google's search URL is so long.
 
 ## Content of the month
 
@@ -99,11 +111,23 @@ The time has finally come for Google to kill one of it's products again, this ti
 
 Source(s): [[Reddit](https://www.reddit.com/r/Android/comments/jsd5kf/google_photos_will_end_its_free_unlimited_storage/) | [The Verge](https://www.theverge.com/2020/11/11/21560810/google-photos-unlimited-cap-free-uploads-15gb-ending) | [Google Blog](https://blog.google/products/photos/storage-changes/)]
 
+### YouTube will run ads on smaller creators' videos without paying them
+
+It's forced, even on channels that opt out of showing advertisements on their videos. Nothing more to add to the title. Read the sources for more information.
+
+Source(s): [[Reddit](https://www.reddit.com/r/technology/comments/jx77c8/youtube_will_run_ads_on_smaller_creators_videos/) | [Engadget](https://www.engadget.com/youtube-ads-on-small-creator-videos-111043478.html) | [Forbes](https://www.forbes.com/sites/johnkoetsier/2020/11/18/youtube-will-now-show-ads-on-all-videos-even-if-creators-dont-want-them/?sh=7d4d56424913)]
+
 ### Flappy bird in 341 bytes of URI formatted HTML and JavaScript
 
 One madman created an entirely playable Flappy Bird in 341 bytes of HTML and JavaScript encoded as URI. As of writing this, the community has tried to reduce it even more and it stands at less than 200 bytes, 195 bytes to be exact.
 
 Source(s): [[Reddit](https://www.reddit.com/r/programming/comments/k3alda/flappy_bird_in_341_bytes/) | [GitHub](https://gist.github.com/gullyn/95b2ab9e465317f1d4e4607cf6e94205)]
+
+### Sword Art Online Progressive will be a Movie instead
+
+SAO Progressive goes all the way back to the start and it follows Asuna's journey on Aincrad. But, unlike most fans expected (including myself), this story will be made as a movie instead of a new series/show as a whole season. Either way, I'm still looking forward to this since Aincrad arc felt super rushed, there's a lot of room for the story to be shown, so having a chance to experience it again is always nice.
+
+Source(s): [[ComicBook](https://comicbook.com/anime/news/sword-art-online-progressive-movie-trailer-anime/)]
 
 ***
 
@@ -178,8 +202,6 @@ Source(s): [[Reddit](https://www.reddit.com/r/programming/comments/k3alda/flappy
 [[Reddit](https://www.reddit.com/r/LifeProTips/comments/jx355w/lpt_when_using_superglue_use_a_very_small_amount/)] Bond superglue immediately by applying water to the other surface
 
 ### 20
-
-[[Reddit](https://www.reddit.com/r/technology/comments/jx77c8/youtube_will_run_ads_on_smaller_creators_videos/) | [Engadget](https://www.engadget.com/youtube-ads-on-small-creator-videos-111043478.html)] YouTube will run ads on smaller creators' videos without paying them
 
 [[Reddit](https://www.reddit.com/r/explainlikeimfive/comments/jxmltg/eli5_what_causes_us_to_get_bagsdark_circles_under/gcxk7ul?context=3)] What causes us to get bags/dark circles under our eyes when we are tired?
 
