add video section

--- a/content/curated/digest/202011.md
+++ b/content/curated/digest/202011.md
@@ -79,9 +79,23 @@ Another worthy mention to MUZZ and Danyka Nadeau latest release, Somewhere Else.
 
 ## Video of the month
 
-![!YouTube#hb]({youtube_id} "title")
+![!YouTube#hb](jRvxnpfCDSo "Why do you get a fever when you're sick?")
+
+This is one of those videos everyone must watch no matter what their background is. Everyone can and will get sick someday, and you need to understand why and how it happens. This video explains it perfectly in around 5 minutes.
 
 ### Honorable video mentions | [YouTube](https://www.youtube.com/playlist?list=PLtthNj7yut56ZNuJAMeu9-o63Idh9auJ3)
+
+![!YouTube#d](thOifuHs6eY "Hexagons are the Bestagons")
+
+Why hexagons are the best shapes that are proven multiple times by nature over thousands of years. Now, after you've watched this video and someone asks you what your favorite shape is, you can confidently say that it's 'hexagon'.
+
+![!YouTube#d](oXVnuG3zO_0 "Why Horseshoe Crab Blood Is So Valuable")
+
+A must-watch for you science geek out there! Horseshoe crab is one of those ancient animals that you might only hear on fairy tales and legends. But, they're actually real (lol) and their blood is like magic potions for us humans.
+
+![!YouTube#d](cnplG_VLiKw "The 3 BIGGEST Lies About Good Posture (3 Myths Busted!)")
+
+The biggest lies about good posture, debunked by calisthenics experts! Everyone, especially those who spend most of your time sitting, whether that's in front of a computer, or in front of your TV, or really anything else that allows you to stay statically for a long time.
 
 ***
 
@@ -223,7 +237,7 @@ Source(s): [[ComicBook](https://comicbook.com/anime/news/sword-art-online-progre
 
 ***
 
-That's it for our recap of November 2020, folks! Stay safe and have a great December 👋
+That's it for our recap of November 2020, folks! Stay safe, have a great December and Merry Christmas to those who celebrate it 👋
 
 As always, let me know if you like this format or have any feedback for the monthly digests in my Twitter, Keybase, or other socials down below.
 
