complete music section

--- a/content/curated/digest/202012.md
+++ b/content/curated/digest/202012.md
@@ -19,9 +19,23 @@ As always, feel free to skip ahead to your preferred content by using the quick 
 
 ## Music of the month
 
-![!YouTube#hb]({youtube_id} "[[Spotify](link)] title")
+![!YouTube#hb](vd3IlOjSUGQ "[[Spotify](spotify:track:6wKmxUeMJAoz2GpMrw95z5)] YOASOBI「ハルカ」 (Haruka)")
 
-### Honorable music mentions | [Spotify]({spotify_playlist_uri}) / [YouTube]({youtube_music_playlist})
+Another amazing release from YOASOBI! This was an unexpectedly welcomed release to close the year. I love the vocals so much and it has a catchy beat too. I might be a little bit biased at this point, but if you love the previous releases, you'll definitely love this as well.
+
+### Honorable music mentions | [Spotify](spotify:playlist:5kV8nVYgylds5wxuVGuctC) / [YouTube](https://www.youtube.com/playlist?list=PLtthNj7yut55qVn14CrIoYAWQ5y7Pw8td)
+
+![!YouTube#d](Y4nEEZwckuU "[[Spotify](spotify:track:0T4AitQuq8IJhWBWuZwkFA)] YOASOBI「群青」 (Ultramarine)")
+
+Ultramarine finally got an official MV! I might've only mentioned it before but this is worth checking out again.
+
+![!YouTube#d](LJBHySglLXU "[[YouTube/NetflixAnime](https://www.youtube.com/watch?v=-5M4lbEpn6c)] YOASOBI 『怪物』 (Kaibutsu) / BEASTARS Season 2 OP")
+
+Another YOASOBI release, yes I know. This might seem excessive and it's not even a full song. But, I'm really interested in watching the series just from this OP. It's only one and a half minute, go check it out for yourself.
+
+![!YouTube#d](H8bgjgZu3Ww "[[Spotify](spotify:track:3CExJpkcpoKeu1ETWlgT8B)] Slippy & Danyka Nadeau - Resonate")
+
+Might just be another bias, but every Slippy release are always a banger. While we're on the topic of Monstercat, the OG artists are back with banger remixes. Even PBN did a remix of another song, which is unheard of.
 
 ## Video of the month
 
