complete video section

--- a/content/curated/digest/202012.md
+++ b/content/curated/digest/202012.md
@@ -39,9 +39,23 @@ Might just be another bias, but every Slippy release are always a banger. While 
 
 ## Video of the month
 
-![!YouTube#hb]({youtube_id} "title")
+![!YouTube#hb](8PyiA7o8LLE "Honobono Log")
 
-### Honorable video mentions | [YouTube]({youtube_video_playlist})
+I'm not sure how I've just discovered this, but wow is it such a nice series to watch. I probably won't always remember this, but when you do stumble upon it again, it really gives off a nostalgic feeling as when you first watched it. This is the complete series as one video, if you prefer to watch by parts, go search it for yourself, I think it's complete in YouTube.
+
+### Honorable video mentions | [YouTube](https://www.youtube.com/playlist?list=PLtthNj7yut574E71vVR0sYZ14qWQS-eYb)
+
+![!YouTube#d](dBap_Lp-0oc "The Illusion You Need To See")
+
+Veritasium ending the year with a crazy illusion anyone absolutely needs to see! I really tried to focus and it works, but man is it tiring and my brain will immediately see the illusion again if I lose focus for just a bit. Definitely worth the watch!
+
+![!YouTube#d](fb3cvohPsRY "Animation is For Everyone")
+
+Yes. Yes. Yes. For you who hasn't opened your mind (and eye) that animation is not for you (or only for kids), please treat yourself by watching this. I might make a dedicated post for this too, but in the meantime MB has explained it pretty well and convincing in this video. I used to be on the denial-train that I don't need to watch animations, but once I learn and actually tried it for myself... I'll explain it more thoroughly in the post. ^-^
+
+![!YouTube#d](-92HQA0GcI8 "Inside the Lab That Invented the COVID-19 Vaccine")
+
+Considering we're still in the middle of a global pandemic, there's no harm in understanding how a Coronavirus spreads and attack its host. I feel this video has explained it nicely, even for those who didn't study science in high school to understand it well. It also explains how the vaccine is made, and how it works.
 
 ***
 
