complete article section

--- a/content/curated/digest/202012.md
+++ b/content/curated/digest/202012.md
@@ -9,7 +9,33 @@ As always, feel free to skip ahead to your preferred content by using the quick 
 
 ## Article of the month
 
+![Code Review#f#fb](https://mtlynch.io/code-review-love/cover.png "[How to Make Your Code Reviewer Fall in Love with You](https://mtlynch.io/code-review-love/) by Michael Lynch")
+
+> When people talk about code reviews, they focus on the reviewer. But the developer who writes the code is just as important to the review as the person who reads it.
+
+Code review isn't just about the reviewer's work and job, it is the whole team's job. The post mentions to value your reviewer's time, but this applies to everyone and not just the reviewer. By improving your code that are being reviewed, you're also improving yourself as well as your experience overall.
+
+TL;DR review the code yourself first and automate stuff that can be automated, that way your reviewer can give you high-quality feedback to improve yourself and reduce the workloads for both of you (and probably the whole team waiting for that PR to merge).
+
 ### Honorable article mentions
+
+- [[PrivacyTools](https://write.privacytools.io/freddy/why-privacy-matters-even-if-you-have-nothing-to-hide)] Privacy matters even if "you have nothing to hide"
+
+I wanted this to be the featured article, but it's a short post without a thumbnail, sorry 😕. But this is still a great read nonetheless! The idea of hiding is fundamentally flawed, and we should strive to revive everyone that privacy is a human right. Having it breached everyday shouldn't be a norm. To quote from the post...
+
+> We all care about our privacy, though we might not know it. It is why we lock the door when we go to the toilet; or why we close the curtains to stop people looking into our homes.
+
+There shouldn't be an argument for protecting our privacy in the first place anyway! Next time someone asks why they should care, asks them back if they want everyone that passes in front of their house to look inside the glass windows? There's nothing to hide in the house, right? Yet, there's curtains to cover the windows.
+
+- [[UX Collective](https://uxdesign.cc/creating-randomness-with-pure-css-a990dafcd569)] Creating randomness with pure CSS
+
+Another mind-blowing technique using pure CSS. I can't of anything useful to use this other than for simple online games, in the meantime. But, just knowing that this is possible is so amazing and fun.
+
+- [[Swizec](https://swizec.com/blog/computer-science-is-not-software-engineering)] Computer science is not software engineering
+
+> Wow, college was such a waste of time ... when did you ever invert a binary tree outside of an interview?
+
+Honestly, please tell me if you really did. On the other hand, this post is a fair assessment, perhaps a little too much on the rambling. But, you should know what it's talking about, especially as someone who studied Computer Science. Others who took the *software development* track on college would probably understand too.
 
 ## Content of the month
 
@@ -61,26 +87,50 @@ Considering we're still in the middle of a global pandemic, there's no harm in u
 
 ## Headlines of the month
 
-### {Headline}
+### Attack on Titan Final Season is MyAnimeList's Biggest Premiere Ever
 
-{Summary}
+With 144,668 people watching the premiere of its first episode, it broke the previous record holder from My Hero Academia Season 3 by a margin of nearly 40,000. Keep in mind that this is only the recorded amount in MyAnimeList, the actual viewers watching all around the world are way higher.
 
-Source(s): [[Links]]
+![MAL Biggest Premieres#d#f](https://img1.ak.crunchyroll.com/i/spire4/52b7bb0aee433aa9a2a4e2c7c4bae4f51607957218_main.jpg "MyAnimeList Biggest Premieres Chart")
+
+If you haven't watched or caught up with the series, there's still time to catch up with the ongoing final season. If you're not convinced yet by the number of people watching the first episode, maybe [Crunchyroll servers collapsing](https://twitter.com/Crunchyroll/status/1335692289427918848) would.
+
+Source(s): [[Crunchyroll](https://www.crunchyroll.com/anime-news/2020/12/14-1/attack-on-titan-final-season-is-myanimelists-biggest-premiere-ever) | [Reddit/Twitter](https://www.reddit.com/r/anime/comments/k86jd5/crunchyroll_servers_collapsed_due_to_amount_of/)]
 
 ***
 
 ## Detailed monthly recap
 
-### {Date}
+### 02
 
-[[Source](link)] Title
+[[Article](https://carolynvanslyck.com/blog/2020/12/git-wip/)] git wip: What the heck was I just doing?
+
+### 03
+
+[[Reddit](https://www.reddit.com/r/Unexpected/comments/k5pu7h/aww_thats_so_nice/)] (clip) What these kinds wanna be
+
+### 09
+
+[[Reddit](https://www.reddit.com/r/nextfuckinglevel/comments/k9k359/random_individuals_showing_their_kindness_towards/)] (clip) Random individuals showing kindness
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/k9jqff/lpt_say_im_not_explaining_this_well_instead_of/)] LPT: say "I'm not explaining this well" instead of "you don't understand"
+
+### 10
+
+[[Reddit](https://www.reddit.com/r/webdev/comments/kah2yj/opensource_developers_say_securing_their_code_is/)] Open-source developers say securing their code is a soul-withering waste of time
+
+### 12
+
+[[Reddit](https://www.reddit.com/r/FUCKYOUINPARTICULAR/comments/kbdhjj/shoe_in_the_face/)] (clip) Shoe in the face!
 
 ***
 
 That's it for our recap of December 2020, folks! Stay safe and have a great January 👋
 
-I'll publish another digest to recap the year, be sure to check it out to get the best bits!
+I'll publish another post to recap the year, be sure to check it out to get the best bits!
 
 As always, let me know if you like this format or have any feedback for the monthly digests in my Twitter, Keybase, or other socials down below.
 
-## Bonus - Monthly memes
+## Bonus - Anime memes
+
+![cute couple#d#f](https://preview.redd.it/ghtmmaxx8q261.jpg?width=640&crop=smart&auto=webp&s=e37802bd6e3a5a80dc894baac84dbcf6ef25f090 "[[Reddit](https://www.reddit.com/r/wholesomeanimemes/comments/k54x2c/goodbye_kiss_karakai_jouzu_no_takagisan/)] Goodbye kiss [Karakai Jouzu No Takagi-san]")
