update headline content

--- a/content/curated/digest/202012.md
+++ b/content/curated/digest/202012.md
@@ -97,6 +97,12 @@ If you haven't watched or caught up with the series, there's still time to catch
 
 Source(s): [[Crunchyroll](https://www.crunchyroll.com/anime-news/2020/12/14-1/attack-on-titan-final-season-is-myanimelists-biggest-premiere-ever) | [Reddit/Twitter](https://www.reddit.com/r/anime/comments/k86jd5/crunchyroll_servers_collapsed_due_to_amount_of/)]
 
+### Cloudflare has joined the battle
+
+After releasing their privacy-first Web Analytics to the world early this month that would compete heavily with Google analytics, they released another product later on called Pages. With Cloudflare Pages, they will competing with Netlify and Vercel head-on to provide an alternative to build Jamstack apps, especially with their well-known worldwide servers for minimal latency and heavy Workers integrations for serverless functions.
+
+Source(s): [[Blog/Analytics](https://blog.cloudflare.com/privacy-first-web-analytics/) | [Blog/Pages](https://blog.cloudflare.com/cloudflare-pages/)]
+
 ***
 
 ## Detailed monthly recap
@@ -123,6 +129,16 @@ Source(s): [[Crunchyroll](https://www.crunchyroll.com/anime-news/2020/12/14-1/at
 
 [[Reddit](https://www.reddit.com/r/FUCKYOUINPARTICULAR/comments/kbdhjj/shoe_in_the_face/)] (clip) Shoe in the face!
 
+### 17
+
+[[GitHub Blog](https://github.blog/2020-12-17-no-cookie-for-you/)] GitHub removed all cookie banners
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/kew20n/lpt_if_a_loved_one_is_taken_in_an_ambulance_do/)] LPT: if a loved one is taken in an ambulance, do not follow us to the hospital. Go there on your own time and own route.
+
+### 19
+
+[[Reddit](https://www.reddit.com/r/nextfuckinglevel/comments/kg5yxj/this_looks_like_plastic_feels_like_plastic_but_it/)] Biodegradable plant-based plastic-like product
+
 ***
 
 That's it for our recap of December 2020, folks! Stay safe and have a great January 👋
@@ -131,6 +147,12 @@ I'll publish another post to recap the year, be sure to check it out to get the 
 
 As always, let me know if you like this format or have any feedback for the monthly digests in my Twitter, Keybase, or other socials down below.
 
-## Bonus - Anime memes
+## Bonus - Monthly memes
 
 ![cute couple#d#f](https://preview.redd.it/ghtmmaxx8q261.jpg?width=640&crop=smart&auto=webp&s=e37802bd6e3a5a80dc894baac84dbcf6ef25f090 "[[Reddit](https://www.reddit.com/r/wholesomeanimemes/comments/k54x2c/goodbye_kiss_karakai_jouzu_no_takagisan/)] Goodbye kiss [Karakai Jouzu No Takagi-san]")
+
+![my entire family when I use the bathroom#d#f](https://preview.redd.it/gwdi3eqq3d561.gif?width=640&format=mp4&s=e10bf5b0edc2a86bdff85883eb86ef531216d05e "[[Reddit](https://www.reddit.com/r/dankmemes/comments/kdmthl/bro_ive_only_been_in_here_for_ten_seconds/)] Bro, I've only been in here for ten seconds")
+
+![a thank you is better than multiple sorry#d#f](https://preview.redd.it/7ra6eacfv6661.jpg?width=960&crop=smart&auto=webp&s=0d25c035bb3ac2b0f1b081fe86be2a0599ef48eb "[[Reddit](https://www.reddit.com/r/wholesomeanimemes/comments/kgdk0e/a_little_rezero_wholesomeness/)] A new perspective to what we all should be saying")
+
+![http status ranges#d#f](https://i.redd.it/lrreaxzfde661.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/kh0z9s/http_status_ranges_in_nutshell/)] HTTP status ranges in a nutshell")
